--- a/css/style.css
+++ b/css/style.css
@@ -108,16 +108,14 @@ body:has(.mobile-nav--active) .header .burger-button {
   }
 }
 .header:has(.burger-button--active) {
-  position: fixed;
+  position: sticky;
   top: 0;
   width: 100%;
-  background-color: #434343;
+  background-color: transparent;
   z-index: 20;
 }
 .header .logo-img {
-  position: relative;
   width: 104px;
-  z-index: 20;
 }
 @media (min-width: 992px) {
   .header .logo-img {
@@ -153,6 +151,9 @@ body:has(.mobile-nav--active) .header .burger-button {
   transform: scale(1.2);
 }
 
+.main .how-it-works {
+  overflow: hidden;
+}
 .main .how-it-works__title {
   color: initial;
   font-size: 1.5rem;
@@ -460,14 +461,13 @@ body:has(.mobile-nav--active) .header .burger-button {
 }
 
 .mobile-nav {
-  padding: 112px 0 2.5rem;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   height: 100vh;
   overflow: auto;
